--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #6fb9b4; }
+  background: #f1837a; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #1ae68d; }
+  background: #e73cff; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #a1f8a3; }
+  background: #cd4ae2; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #cdb95e; }
+  background: #01da07; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #a70501; }
+  background: #dba91b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #963074; }
+  background: #a02902; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #1011b3; }
+  background: #04ad8f; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #6b35a0; }
+  background: #8bc5a0; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #96137b; }
+  background: #d91229; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #1e61e9; }
+  background: #a9be4e; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #2bfc63; }
+  background: #8d1c31; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #03ec64; }
+  background: #2c7dd6; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #7d4f07; }
+  background: #857068; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #02bbd4; }
+  background: #65959b; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #684db4; }
+  background: #36f630; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #863a08; }
+  background: #3951ea; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #5f7075; }
+  background: #ce5f71; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #e110a8; }
+  background: #805b98; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #92e766; }
+  background: #3cbe08; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #337982; }
+  background: #6bbef2; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #f52d78; }
+  background: #d69f82; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #cb35b0; }
+  background: #db4a4b; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #5347a6; }
+  background: #d184a4; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #60ad45; }
+  background: #6b0c46; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #477b9f; }
+  background: #e297df; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #2a7c3c; }
+  background: #25f206; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #d31c1f; }
+  background: #848149; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #ef80fe; }
+  background: #7b8de4; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #b4dac5; }
+  background: #6de270; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #345d1d; }
+  background: #a5e8a0; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #ca71f0; }
+  background: #5474b3; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #ceab7b; }
+  background: #019bea; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #d574a8; }
+  background: #3cf792; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #6a4963; }
+  background: #acd758; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #fee4f1; }
+  background: #03a81f; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #1d4ba7; }
+  background: #9d650d; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #3ef932; }
+  background: #ec80fd; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #da53d1; }
+  background: #9ba7b0; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #925394; }
+  background: #f181be; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #a16e69; }
+  background: #64d4a0; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #0c0dce; }
+  background: #ea765e; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #557af0; }
+  background: #dee527; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #b26488; }
+  background: #876e44; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #c1185b; }
+  background: #187002; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #744fe6; }
+  background: #cfa33c; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #3a9359; }
+  background: #9ef315; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #6eb1ce; }
+  background: #1d5768; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #fedc98; }
+  background: #4d39aa; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #1d6538; }
+  background: #e16f74; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #84316e; }
+  background: #717a0f; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #87f142; }
+  background: #8678ef; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #cca865; }
+  background: #f2de58; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #2fe843; }
+  background: #e2f9a5; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #ea3a7b; }
+  background: #ee78e6; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #100b5f; }
+  background: #423e49; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #07754c; }
+  background: #28d2d6; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #b244f9; }
+  background: #1c0b12; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #45d650; }
+  background: #d9e72c; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #7b280b; }
+  background: #479d25; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #03fdb3; }
+  background: #f30571; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #521fc1; }
+  background: #33dbe9; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #47f68a; }
+  background: #d95d1f; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #d47eaf; }
+  background: #bc984a; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #336049; }
+  background: #df247c; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #199654; }
+  background: #679f4b; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #d20234; }
+  background: #b0333e; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #4f3879; }
+  background: #649d82; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #67ff2e; }
+  background: #b4fdb4; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #0e1298; }
+  background: #9f1c62; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #ca3008; }
+  background: #713f7c; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #668bcd; }
+  background: #64717d; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #c34e9f; }
+  background: #0e13e4; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #838db1; }
+  background: #c046b2; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #416547; }
+  background: #cb7bc0; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #1053b4; }
+  background: #ba3796; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #b7e73a; }
+  background: #accb19; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #3df9ec; }
+  background: #c313ba; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #793128; }
+  background: #b3da83; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #c8a7c0; }
+  background: #49b446; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #1301c1; }
+  background: #0e6f29; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #9142e9; }
+  background: #0e5e05; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #696142; }
+  background: #bd5e2b; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #8a4077; }
+  background: #5c659d; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #e1c44a; }
+  background: #750fbd; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #4b6ade; }
+  background: #242a51; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #0aa51b; }
+  background: #f3b86c; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #b85c4b; }
+  background: #e376c7; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #87a3f4; }
+  background: #b49d04; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #25df0d; }
+  background: #1fddf4; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #db4027; }
+  background: #a31623; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #9217c8; }
+  background: #2522bd; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #306f56; }
+  background: #035973; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #70dfe1; }
+  background: #5798c3; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #5f2687; }
+  background: #46c482; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #cb5ade; }
+  background: #ed44a5; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #1a6095; }
+  background: #b4d5ce; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #936d93; }
+  background: #0752c5; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #b56510; }
+  background: #78d2d7; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #e5997f; }
+  background: #6fd5db; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #5b394d; }
+  background: #135af4; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10762,14 +10762,14 @@ table .bold-heading {
   flex-wrap: wrap; }
   .bubble-tags-wrapper .bubble {
     background: #f6f6f6;
-    padding: 8px;
+    padding: 8px 6px 6px 8px;
     display: grid;
     justify-content: center;
     grid-gap: 10px;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr auto;
     align-items: center;
     font-size: 14px;
-    margin: 6px; }
+    margin: 6px 6px 12px; }
     .bubble-tags-wrapper .bubble a {
       display: flex; }
 
