--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -4115,14 +4115,14 @@ line-height: 145.5px;
 
  .bubble {
   background: #f6f6f6;
-  padding: 8px;
+  padding: 8px 6px 6px 8px;
   display: grid;
   justify-content: center;
   grid-gap: 10px;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 1fr auto;
   align-items: center;
   font-size: 14px;
-  margin: 6px;
+  margin: 6px 6px 12px;
   a {
    display: flex;
   }
