--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f1837a; }
+  background: #d60a14; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #e73cff; }
+  background: #a9b39a; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #cd4ae2; }
+  background: #681260; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #01da07; }
+  background: #8024b3; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #dba91b; }
+  background: #ed4d84; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #a02902; }
+  background: #53e90f; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #04ad8f; }
+  background: #b7bf81; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #8bc5a0; }
+  background: #5a337d; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #d91229; }
+  background: #b8e75a; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #a9be4e; }
+  background: #67d9f2; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #8d1c31; }
+  background: #2b565d; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #2c7dd6; }
+  background: #a6c6f2; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #857068; }
+  background: #0fa3ef; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #65959b; }
+  background: #5a8863; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #36f630; }
+  background: #67e089; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #3951ea; }
+  background: #333522; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #ce5f71; }
+  background: #454be0; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #805b98; }
+  background: #1505ae; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #3cbe08; }
+  background: #18f9d4; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #6bbef2; }
+  background: #ff24cc; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #d69f82; }
+  background: #60f9d6; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #db4a4b; }
+  background: #868b87; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #d184a4; }
+  background: #56ddc7; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #6b0c46; }
+  background: #1f9bc0; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #e297df; }
+  background: #746df4; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #25f206; }
+  background: #f3eb1a; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #848149; }
+  background: #02444b; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #7b8de4; }
+  background: #5f64a1; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #6de270; }
+  background: #bf3518; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #a5e8a0; }
+  background: #c73993; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #5474b3; }
+  background: #7fec0b; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #019bea; }
+  background: #3355db; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #3cf792; }
+  background: #71734c; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #acd758; }
+  background: #d24c3f; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #03a81f; }
+  background: #1505d6; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #9d650d; }
+  background: #6eaf66; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #ec80fd; }
+  background: #20dff3; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #9ba7b0; }
+  background: #9edaaf; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #f181be; }
+  background: #289522; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #64d4a0; }
+  background: #4dd818; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #ea765e; }
+  background: #c3220d; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #dee527; }
+  background: #93e735; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #876e44; }
+  background: #3a56a2; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #187002; }
+  background: #4e4e2a; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #cfa33c; }
+  background: #06b6a2; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #9ef315; }
+  background: #71a09a; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #1d5768; }
+  background: #bb407b; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #4d39aa; }
+  background: #de806c; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #e16f74; }
+  background: #ea7591; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #717a0f; }
+  background: #a0e484; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #8678ef; }
+  background: #6e81bc; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #f2de58; }
+  background: #726e4b; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #e2f9a5; }
+  background: #6344b0; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #ee78e6; }
+  background: #a0e124; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #423e49; }
+  background: #e075ce; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #28d2d6; }
+  background: #f08527; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #1c0b12; }
+  background: #a8d825; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #d9e72c; }
+  background: #65be65; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #479d25; }
+  background: #79245f; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f30571; }
+  background: #7f36f6; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #33dbe9; }
+  background: #cd9195; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #d95d1f; }
+  background: #025de8; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #bc984a; }
+  background: #d74fec; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #df247c; }
+  background: #6f594f; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #679f4b; }
+  background: #c5c77a; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #b0333e; }
+  background: #be47bf; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #649d82; }
+  background: #04ed33; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b4fdb4; }
+  background: #3a284d; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #9f1c62; }
+  background: #5a6cd7; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #713f7c; }
+  background: #8c98c1; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #64717d; }
+  background: #18c101; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #0e13e4; }
+  background: #cebc96; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #c046b2; }
+  background: #c5d668; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #cb7bc0; }
+  background: #50ccd6; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #ba3796; }
+  background: #ea0c9f; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #accb19; }
+  background: #f7cb6c; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #c313ba; }
+  background: #a8acd8; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #b3da83; }
+  background: #c30333; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #49b446; }
+  background: #6094f5; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #0e6f29; }
+  background: #c881c2; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #0e5e05; }
+  background: #7ff168; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #bd5e2b; }
+  background: #53ed74; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #5c659d; }
+  background: #5a7d50; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #750fbd; }
+  background: #108f8f; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #242a51; }
+  background: #074f37; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #f3b86c; }
+  background: #86e4a1; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #e376c7; }
+  background: #576621; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #b49d04; }
+  background: #44501f; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #1fddf4; }
+  background: #8d6da3; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #a31623; }
+  background: #7c258f; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #2522bd; }
+  background: #036aa8; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #035973; }
+  background: #6cad08; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #5798c3; }
+  background: #c1e72e; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #46c482; }
+  background: #6144d2; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #ed44a5; }
+  background: #6a4548; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #b4d5ce; }
+  background: #f8026e; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #0752c5; }
+  background: #85c71b; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #78d2d7; }
+  background: #8c39fd; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #6fd5db; }
+  background: #55ffaf; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #135af4; }
+  background: #a920df; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10952,6 +10952,47 @@ table .bold-heading {
     .table-preview .table tbody td {
       padding: 10px 0px;
       text-align: center; }
+
+.standard-table .bold-heading {
+  font-weight: normal;
+  color: #4c4c4c;
+  font-size: 16px;
+  background: none; }
+.standard-table .stripe tr:nth-of-type(odd) {
+  background: #fafafa; }
+.standard-table table {
+  white-space: nowrap;
+  width: 100%;
+  border: 0px; }
+  .standard-table table input {
+    margin: 0px 4px; }
+  .standard-table table .table-cell-div {
+    position: relative;
+    top: -3px; }
+.standard-table tbody {
+  background: white; }
+.standard-table table thead {
+  background: none; }
+  .standard-table table thead th {
+    font-weight: 600;
+    font-size: 16px;
+    color: #4c4c4c;
+    border: 0px; }
+    .standard-table table thead th input {
+      margin-left: 0px; }
+    .standard-table table thead th a {
+      margin: 0px 3px; }
+  .standard-table table thead td {
+    font-size: 14px;
+    color: #4c4c4c;
+    border-top: 1px solid #ecedf2; }
+.standard-table .td-center {
+  text-align: center;
+  vertical-align: middle; }
+  .standard-table .td-center a {
+    margin: 0px 5px; }
+    .standard-table .td-center a img {
+      width: 20px; }
 
 @font-face {
   font-family: 'proxima-semi-bold';
