--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -4332,3 +4332,73 @@ height: 250px;
   }
   }
 }
+
+
+// Talha Standard Table
+
+.standard-table {
+  .bold-heading {
+   font-weight: normal;
+   color: #4c4c4c;
+   font-size: 16px;
+   background: none;
+  }
+ 
+  .stripe tr:nth-of-type(odd) {
+   background: #fafafa;
+  }
+ 
+  table {
+   white-space: nowrap;
+   width: 100%;
+   border: 0px;
+ 
+   input {
+    margin: 0px 4px;
+   }
+ 
+   .table-cell-div {
+    position: relative;
+    top: -3px;
+   }
+  }
+ 
+  tbody {
+   background: white;
+  }
+  table thead {
+   background: none;
+ 
+   th {
+    font-weight: 600;
+    font-size: 16px;
+    color: #4c4c4c;
+    border: 0px;
+ 
+    input {
+     margin-left: 0px;
+    }
+    a {
+     margin: 0px 3px;
+    }
+   }
+ 
+   td {
+    font-size: 14px;
+    color: #4c4c4c;
+    border-top: 1px solid #ecedf2;
+   }
+  }
+ 
+  .td-center {
+   text-align: center;
+   vertical-align: middle;
+ 
+   a {
+    margin: 0px 5px;
+    img {
+      width: 20px;
+    }
+   }
+  }
+ }
