--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #d60a14; }
+  background: #f50609; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #a9b39a; }
+  background: #37500d; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #681260; }
+  background: #6dc374; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #8024b3; }
+  background: #bb8530; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #ed4d84; }
+  background: #888427; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #53e90f; }
+  background: #1d2a95; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #b7bf81; }
+  background: #2d4a63; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #5a337d; }
+  background: #e33e29; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b8e75a; }
+  background: #7c4a28; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #67d9f2; }
+  background: #a9f7df; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #2b565d; }
+  background: #7e1f8b; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #a6c6f2; }
+  background: #50836f; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #0fa3ef; }
+  background: #0ecd99; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #5a8863; }
+  background: #f4eb66; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #67e089; }
+  background: #f5b2fc; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #333522; }
+  background: #7b6d4c; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #454be0; }
+  background: #0343a8; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #1505ae; }
+  background: #59fd5f; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #18f9d4; }
+  background: #cceba9; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #ff24cc; }
+  background: #0ffd1c; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #60f9d6; }
+  background: #7ce072; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #868b87; }
+  background: #57843b; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #56ddc7; }
+  background: #78ce0d; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #1f9bc0; }
+  background: #a510cf; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #746df4; }
+  background: #07f8c8; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #f3eb1a; }
+  background: #30d0da; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #02444b; }
+  background: #b86ed1; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #5f64a1; }
+  background: #cd68db; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #bf3518; }
+  background: #41c528; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #c73993; }
+  background: #0bd77f; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #7fec0b; }
+  background: #5b56f9; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #3355db; }
+  background: #729129; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #71734c; }
+  background: #d3ee7d; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d24c3f; }
+  background: #d7913e; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #1505d6; }
+  background: #37a660; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #6eaf66; }
+  background: #c1dc68; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #20dff3; }
+  background: #dc45a1; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #9edaaf; }
+  background: #fdf857; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #289522; }
+  background: #1adfd3; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #4dd818; }
+  background: #f2bea0; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #c3220d; }
+  background: #91ad79; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #93e735; }
+  background: #bb0fdd; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #3a56a2; }
+  background: #47665e; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #4e4e2a; }
+  background: #cdf868; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #06b6a2; }
+  background: #0894c0; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #71a09a; }
+  background: #3b8569; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #bb407b; }
+  background: #be76d3; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #de806c; }
+  background: #d9c84a; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #ea7591; }
+  background: #c7b06f; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #a0e484; }
+  background: #3baec6; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #6e81bc; }
+  background: #47daf4; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #726e4b; }
+  background: #5b4e59; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #6344b0; }
+  background: #57b3b5; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #a0e124; }
+  background: #e6a211; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #e075ce; }
+  background: #84b32f; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #f08527; }
+  background: #1258e2; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #a8d825; }
+  background: #854d1a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #65be65; }
+  background: #3ee6f5; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #79245f; }
+  background: #b02cd6; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #7f36f6; }
+  background: #6178dc; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #cd9195; }
+  background: #fef7bc; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #025de8; }
+  background: #37c0e3; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #d74fec; }
+  background: #864064; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #6f594f; }
+  background: #793b21; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #c5c77a; }
+  background: #c97117; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #be47bf; }
+  background: #e41955; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #04ed33; }
+  background: #6195eb; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #3a284d; }
+  background: #36de28; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #5a6cd7; }
+  background: #d0a6c3; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #8c98c1; }
+  background: #af94cb; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #18c101; }
+  background: #d9a41e; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #cebc96; }
+  background: #16df23; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #c5d668; }
+  background: #d7ba7c; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #50ccd6; }
+  background: #439ff8; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #ea0c9f; }
+  background: #1c26b4; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #f7cb6c; }
+  background: #546a8f; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #a8acd8; }
+  background: #7b57b8; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #c30333; }
+  background: #d2a2b2; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #6094f5; }
+  background: #3a219d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #c881c2; }
+  background: #c79c6e; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #7ff168; }
+  background: #5494a6; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #53ed74; }
+  background: #5d3497; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #5a7d50; }
+  background: #1c7a84; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #108f8f; }
+  background: #8fa7bb; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #074f37; }
+  background: #5ee1d2; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #86e4a1; }
+  background: #d1bad4; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #576621; }
+  background: #99ccc8; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #44501f; }
+  background: #d3ddc3; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #8d6da3; }
+  background: #23fbcf; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #7c258f; }
+  background: #5889ed; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #036aa8; }
+  background: #5ff6d4; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #6cad08; }
+  background: #82422b; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #c1e72e; }
+  background: #21ae66; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #6144d2; }
+  background: #4d9f37; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #6a4548; }
+  background: #112e87; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #f8026e; }
+  background: #044386; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #85c71b; }
+  background: #77144e; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #8c39fd; }
+  background: #f65ad0; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #55ffaf; }
+  background: #70b152; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #a920df; }
+  background: #c7896c; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10762,7 +10762,7 @@ table .bold-heading {
   flex-wrap: wrap; }
   .bubble-tags-wrapper .bubble {
     background: #f6f6f6;
-    padding: 8px 6px 6px 8px;
+    padding: 8px 4px 6px 8px;
     display: grid;
     justify-content: center;
     grid-gap: 10px;
@@ -11090,7 +11090,7 @@ a {
     color: #776FFF; }
 
 .graydient-secondary-btn {
-  background: #413f3f; }
+  background: #7D7D7D; }
   .graydient-secondary-btn:hover {
     background: #5e5e5e; }
 
@@ -15104,8 +15104,7 @@ table .parent-row,
   width: 100%;
   margin-top: 20px;
   display: flex;
-  justify-content: space-between;
-  align-items: center; }
+  justify-content: space-between; }
   .view-boxs-wrapper .view-box {
     border: 1px solid #c4c4c4;
     padding: 20px;
@@ -15506,6 +15505,7 @@ option {
           font-weight: 600; }
 
 .form-control:disabled,
+.custom-select:disabled,
 .form-control[readonly] {
   background-color: #d7d7d7 !important; }
 
@@ -16079,6 +16079,14 @@ option {
   right: -10px;
   content: "";
   z-index: 99; }
+
+.perform-task-fields-div {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  grid-gap: 15px; }
+
+.grid-full-width {
+  grid-column: 1/-1; }
 
 @media screen and (max-width: 767px) {
   .four-dropdwon-div {
