--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f50609; }
+  background: #ac83c0; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #37500d; }
+  background: #c12cb6; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #6dc374; }
+  background: #d0aa74; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #bb8530; }
+  background: #7f5ba6; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #888427; }
+  background: #696894; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #1d2a95; }
+  background: #853b32; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #2d4a63; }
+  background: #32e403; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #e33e29; }
+  background: #378aa7; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #7c4a28; }
+  background: #ce3e6f; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #a9f7df; }
+  background: #9d046e; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #7e1f8b; }
+  background: #0cebb9; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #50836f; }
+  background: #7339ff; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #0ecd99; }
+  background: #cb9267; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #f4eb66; }
+  background: #774c7d; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #f5b2fc; }
+  background: #1ce65e; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #7b6d4c; }
+  background: #897f71; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #0343a8; }
+  background: #fcba22; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #59fd5f; }
+  background: #e2ebd4; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #cceba9; }
+  background: #bf97cc; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #0ffd1c; }
+  background: #23071c; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #7ce072; }
+  background: #cd66cb; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #57843b; }
+  background: #46063d; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #78ce0d; }
+  background: #f3868e; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #a510cf; }
+  background: #03b405; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #07f8c8; }
+  background: #331155; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #30d0da; }
+  background: #8c3271; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #b86ed1; }
+  background: #aaf049; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #cd68db; }
+  background: #1bf82a; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #41c528; }
+  background: #55a31a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #0bd77f; }
+  background: #0b236a; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #5b56f9; }
+  background: #6bf1ae; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #729129; }
+  background: #0de559; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #d3ee7d; }
+  background: #5401c4; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d7913e; }
+  background: #96423a; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #37a660; }
+  background: #f9696c; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #c1dc68; }
+  background: #c3110d; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #dc45a1; }
+  background: #dcd63e; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #fdf857; }
+  background: #574fb1; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #1adfd3; }
+  background: #45f542; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #f2bea0; }
+  background: #4275d9; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #91ad79; }
+  background: #82324f; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #bb0fdd; }
+  background: #36c036; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #47665e; }
+  background: #08de59; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #cdf868; }
+  background: #c61613; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #0894c0; }
+  background: #0b7abc; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #3b8569; }
+  background: #6ea8be; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #be76d3; }
+  background: #4a70fa; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #d9c84a; }
+  background: #a85ba5; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #c7b06f; }
+  background: #40abe0; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #3baec6; }
+  background: #a6dbec; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #47daf4; }
+  background: #5cacdb; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #5b4e59; }
+  background: #a07a20; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #57b3b5; }
+  background: #38d6c0; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #e6a211; }
+  background: #563527; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #84b32f; }
+  background: #650447; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #1258e2; }
+  background: #109fe1; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #854d1a; }
+  background: #f1d3ba; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #3ee6f5; }
+  background: #0acb4e; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #b02cd6; }
+  background: #74de25; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #6178dc; }
+  background: #586125; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #fef7bc; }
+  background: #35b0b6; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #37c0e3; }
+  background: #9b12ed; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #864064; }
+  background: #b54f3a; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #793b21; }
+  background: #181e89; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #c97117; }
+  background: #6839ea; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #e41955; }
+  background: #c78fb4; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #6195eb; }
+  background: #9e1ad9; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #36de28; }
+  background: #d08a3a; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #d0a6c3; }
+  background: #2ba8e4; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #af94cb; }
+  background: #362704; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #d9a41e; }
+  background: #0a3367; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #16df23; }
+  background: #fd7e56; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #d7ba7c; }
+  background: #71fe43; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #439ff8; }
+  background: #e08f3a; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #1c26b4; }
+  background: #301fc2; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #546a8f; }
+  background: #883c58; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #7b57b8; }
+  background: #fec984; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #d2a2b2; }
+  background: #0e3178; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #3a219d; }
+  background: #264d55; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #c79c6e; }
+  background: #6b9e9b; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #5494a6; }
+  background: #e4cc09; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #5d3497; }
+  background: #b4612a; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #1c7a84; }
+  background: #3b418e; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #8fa7bb; }
+  background: #92f7d7; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #5ee1d2; }
+  background: #ead78f; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #d1bad4; }
+  background: #1b4638; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #99ccc8; }
+  background: #944306; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #d3ddc3; }
+  background: #372abd; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #23fbcf; }
+  background: #99b587; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #5889ed; }
+  background: #e750a1; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #5ff6d4; }
+  background: #645344; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #82422b; }
+  background: #eccdc3; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #21ae66; }
+  background: #7499c0; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #4d9f37; }
+  background: #f43f38; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #112e87; }
+  background: #63099c; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #044386; }
+  background: #87a0eb; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #77144e; }
+  background: #2ecfea; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #f65ad0; }
+  background: #969499; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #70b152; }
+  background: #d7ee3c; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #c7896c; }
+  background: #0b3704; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10765,7 +10765,7 @@ table .bold-heading {
     padding: 8px 4px 6px 8px;
     display: grid;
     justify-content: center;
-    grid-gap: 10px;
+    grid-gap: 4px;
     grid-template-columns: 1fr auto;
     align-items: center;
     font-size: 14px;
@@ -10993,6 +10993,10 @@ table .bold-heading {
     margin: 0px 5px; }
     .standard-table .td-center a img {
       width: 20px; }
+
+.standard-table-scroll {
+  overflow-y: hidden;
+  height: 290px; }
 
 @font-face {
   font-family: 'proxima-semi-bold';
@@ -15189,6 +15193,9 @@ li:hover {
   -webkit-transition: all 300ms;
   transition: all 300ms; }
 
+.tab-content-small {
+  width: 45vw !important; }
+
 .slid-screen-wrapper .sliding-left-section {
   display: block;
   min-width: 232px;
@@ -15202,7 +15209,6 @@ li:hover {
     top: 76px;
     left: 232px;
     z-index: 8;
-    width: 68vw;
     padding: 0px; }
     .slid-screen-wrapper .sliding-left-section .tab-content .activea {
       box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.19);
