--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2988,7 +2988,9 @@ table .parent-row,
   -webkit-transition: all 300ms;
   transition: all 300ms;
 }
-
+.tab-content-small {
+  width: 45vw !important;
+}
 .slid-screen-wrapper {
   .sliding-left-section {
     display: block;
@@ -3004,7 +3006,7 @@ table .parent-row,
       top: 76px;
       left: 232px;
       z-index: 8;
-      width: 68vw;
+      // width: 68vw;
       padding: 0px;
 
       .activea {
